Rename file name without extension to stem

--- a/tests/templates/md/file.html
+++ b/tests/templates/md/file.html
@@ -2,7 +2,7 @@
 <head><title>{{ source.file }}</title></head>
 <body>
 file: {{ source.file }}
-file.name: {{ source.file.name }}
+file.name: {{ source.file.stem }}
 file.extension: {{ source.file.extension }}
 
 </body>
