Rename file attribute to filename

--- a/tests/templates/md/file.html
+++ b/tests/templates/md/file.html
@@ -1,9 +1,9 @@
 <html lang="en">
-<head><title>{{ source.file }}</title></head>
+<head><title>{{ source.filename }}</title></head>
 <body>
-file: {{ source.file }}
-file.name: {{ source.file.stem }}
-file.extension: {{ source.file.extension }}
+filename: {{ source.filename }}
+filename.name: {{ source.filename.stem }}
+filename.extension: {{ source.filename.extension }}
 
 </body>
 </html>
