--- a/examples/markdown-blog/static/scss/lightweight.scss
+++ b/examples/markdown-blog/static/scss/lightweight.scss
@@ -3,13 +3,25 @@ $black: #000000;
 $black-alt: #010101; // A workaround for Safari issue with underline and hover.
 $black-down: #3f3f3f;
 
+$lean-width: 700px;
+$lean-width-plus: 740px;
+$stick-header-width: 940px;
+
 body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
   font-size: 1.1rem;
   background-color: #f8f8f8;
   font-family: Georgia, serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  margin: 0;
 
   p {
     line-height: 1.5rem;
@@ -33,15 +45,13 @@ body {
 
   main {
     max-width: 800px;
-    margin: auto;
 
     @media screen and (max-width: 840px) {
-      margin: 1em;
-
+      padding: 0 1em 0;
     }
 
     .double-container {
-      @media screen and (max-width: 700px) {
+      @media screen and (max-width: $lean-width-plus) {
         display: block;
       }
 
@@ -54,39 +64,56 @@ body {
     }
   }
 
-  header {
-    h1 {
-      display: inline;
+  #header-container {
+    width: 900px;
+
+    @media screen and (max-width: $stick-header-width) {
+      width: 100vw;
     }
 
-    @media screen and (max-width: 940px) {
-      margin: 1em;
-    }
-    max-width: 900px;
-    margin: 1em auto;
+    header {
+      display: flex;
+      flex-direction: row;
+      align-items: baseline;
+      justify-content: space-between;
 
-    nav {
-      @media screen and (max-width: 700px) {
-        float: none;
-        font-size: 1.6em;
-        margin-top: 0.3em;
-        margin-left: -0.15em;
+      @media screen and (max-width: $stick-header-width) {
+        padding: 0 1em 0;
       }
 
-      float: right;
-      font-size: 2em;
+      @media screen and (max-width: $lean-width) {
+        display: block;
+      }
 
-      a {
-        padding: 0 0.15em;
-        text-decoration: underline;
-        text-transform: lowercase;
+      nav {
+        font-size: 1.6em;
+
+        @media screen and (max-width: $lean-width) {
+          margin-left: -0.13em;
+        }
+
+        a {
+          padding: 0 0.15em;
+          text-transform: lowercase;
+        }
       }
     }
   }
 
   footer {
-    margin: 1em;
-    text-align: center;
+    @media screen and (max-width: $lean-width) {
+      width: 100vw;
+
+      p {
+        padding: 1em;
+      }
+    }
+  }
+
+  pre code {
+    @media screen and (max-width: $lean-width-plus) {
+      max-width: 86vw;
+    }
   }
 
   .bash:before {
