--- a/examples/markdown-blog/templates/base.html
+++ b/examples/markdown-blog/templates/base.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <link type="text/css" rel="stylesheet" href="/static/css/style.css" media="screen,projection">
+
+    <link type="text/css" rel="stylesheet" href="/static/css/lightweight.css" media="screen,projection">
     <link type="text/css" rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/ocean.min.css"
           media="none" onload="media='all'"> <!-- aka "do not block load"  -->
+
     <link rel="alternate" type="application/rss+xml" title="New Posts" href="/posts.rss.xml"/>
     <link rel="alternate" type="application/atom+xml" title="New Posts" href="/posts.atom.xml"/>
+
     <link rel="apple-touch-icon" sizes="57x57" href="/static/img/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/static/img/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/static/img/apple-icon-72x72.png">
@@ -27,15 +30,17 @@
 </head>
 <body>
 
-<header>
-    <a href="/"><h1>Lightweight</h1></a>
-    <nav>
-        <a href="/posts"><span>Blog</span></a>
-        <a href="https://lightweight.readthedocs.io"><span>Docs</span></a>
-        <a href="https://pypi.org/project/lightweight/"><span>PyPI</span></a>
-        <a href="https://github.com/mdrachuk/lightweight"><span>GitHub</span></a>
-    </nav>
-</header>
+<div id="header-container">
+    <header>
+        <a href="/"><h1>Lightweight</h1></a>
+        <nav>
+            <a href="/posts"><span>Blog</span></a>
+            <a href="https://lightweight.readthedocs.io"><span>Docs</span></a>
+            <a href="https://pypi.org/project/lightweight/"><span>PyPI</span></a>
+            <a href="https://github.com/mdrachuk/lightweight"><span>GitHub</span></a>
+        </nav>
+    </header>
+</div>
 
 <main>
     {% block main %} {% endblock %}
@@ -45,7 +50,9 @@
     <p>© <a href="https://drach.uk"><span>Misha Drachuk</span></a> 2019</p>
 </footer>
 
-<script async charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"
+<script async
+        charset="UTF-8"
+        src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"
         onload="hljs.initHighlightingOnLoad()"></script>
 
 {% if DEV_ENVIRONMENT %}
