Include highlight js

--- a/examples/markdown-blog/styles/lightweight.scss
+++ b/examples/markdown-blog/styles/lightweight.scss
@@ -1,3 +1,5 @@
+@import "./hljs-ocean";
+
 $accent: rgb(250, 160, 0);
 $black: #000000;
 $black-alt: #010101; // A workaround for Safari issue with underline and hover.
