Add Zen Of Python blog post

--- a/examples/lightweight-home/templates/blog-post.html
+++ b/examples/lightweight-home/templates/blog-post.html
@@ -5,6 +5,7 @@
         {{ markdown.toc_html }}
     </nav>
     <article>
+        <h1>{{ markdown.title }}</h1>
         {{ markdown.html }}
     </article>
 {% endblock %}
