--- a/examples/lightweight-home/styles/lightweight.scss
+++ b/examples/lightweight-home/styles/lightweight.scss
@@ -45,6 +45,11 @@ body {
     }
   }
 
+  hr {
+    margin: 2em 0;
+    border: 1px solid rgb(234, 234, 234);
+  }
+
   main {
     max-width: 800px;
 
