Order, preview and ToC object for markdown

--- a/tests/templates/md/toc.html
+++ b/tests/templates/md/toc.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head><title>{{ markdown.title }}</title></head>
 <body>
-{{ markdown.toc_html }}
+{{ markdown.toc.html }}
 </body>
 </html>
