--- a/examples/lightweight-home/templates/base.html
+++ b/examples/lightweight-home/templates/base.html
@@ -39,9 +39,7 @@
     </header>
 </div>
 
-<main>
-    {% block main %} {% endblock %}
-</main>
+<main>{% block main %} {% endblock %}</main>
 
 <footer>
     <p>
