--- a/examples/lightweight-home/styles/lightweight.scss
+++ b/examples/lightweight-home/styles/lightweight.scss
@@ -25,6 +25,10 @@ body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 
+  @media screen and (max-width: $lean-width) {
+    align-items: initial;
+  }
+
   p {
     line-height: 1.5rem;
   }
@@ -108,18 +112,13 @@ body {
   }
 
   footer {
-    @media screen and (max-width: $lean-width) {
-      width: 100vw;
-
-      p {
-        padding: 1em;
-      }
-    }
+    padding: 1em;
+    font-size: 1rem;
   }
 
   pre code {
     @media screen and (max-width: $lean-width-plus) {
-      max-width: 86vw;
+      max-width: 92vw;
     }
   }
 
