Better naming for rendered properties

--- a/tests/templates/md/file.html
+++ b/tests/templates/md/file.html
@@ -1,9 +1,9 @@
 <html lang="en">
-<head><title>{{ source.path.name }}</title></head>
+<head><title>{{ content.source_path.name }}</title></head>
 <body>
-filename: {{ source.path.name }}
-filename.name: {{ source.path.stem }}
-filename.extension: {{ source.path.suffix }}
+filename: {{ content.source_path.name }}
+filename.name: {{ content.source_path.stem }}
+filename.extension: {{ content.source_path.suffix }}
 
 </body>
 </html>
