--- a/tests/templates/md/lazy.html
+++ b/tests/templates/md/lazy.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head><title>{{ markdown.title }}</title></head>
+<head><title>{{ content.title }}</title></head>
 <body>
 <subtitle>{{ lazy }}</subtitle>
 {{ markdown.html }}
