--- a/tests/templates/md/plain.html
+++ b/tests/templates/md/plain.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head><title>{{ markdown.title }}</title></head>
+<head><title>{{ content.title }}</title></head>
 <body>
 {{ markdown.html }}
 </body>
