--- a/lightweight/project-template/site.py.jinja
+++ b/lightweight/project-template/site.py.jinja
@@ -23,31 +23,33 @@ def {! title_slug !}(url):
         # Render an index page from Jinja2 template.
         site.include('index.html', jinja('index.html'))
 
+        site.include('labs.html', jinja('labs.html'))
+
         # Render markdown blog posts.
-        [site.include(f'posts/{post.source_path.stem}.html', post) for post in blog_posts('posts/**.md')]
-        site.include('posts.html', jinja('posts.html', posts=from_ctx(post_tasks)))
+        [site.include(f'blog/{post.source_path.stem}.html', post) for post in blog_posts('blog/**.md')]
+        site.include('blog.html', jinja('blog.html', posts=from_ctx(post_tasks)))
 
         # Syndicate RSS and Atom feeds.
-        site.include('posts.atom.xml', atom(site['posts']))
-        site.include('posts.rss.xml', rss(site['posts']))
+        site.include('blog.atom.xml', atom(site['blog']))
+        site.include('blog.rss.xml', rss(site['blog']))
 
         # Render SASS to CSS.
         site.include('css/global.css', sass('styles/global.scss'))
 
         # Include directory with all of its contents.
         site.include('js')
-        site.include('images')
+        site.include('img')
 
     return site
 
 
 def blog_posts(source: str):
-    post_template = template('posts/_template.html')
+    post_template = template('templates/blog/post.html')
     return (markdown(path, post_template) for path in paths(source))
 
 
 def post_tasks(ctx: GenContext):
-    return [task for task in ctx.tasks if task.path.parts[0] == 'posts']
+    return [task for task in ctx.tasks if task.path.parts[0] == 'blog']
 
 
 def dev(host: str, port: int):
