--- a/lightweight/project-template/styles/layout.scss
+++ b/lightweight/project-template/styles/layout.scss
@@ -1,16 +1,6 @@
-@import "hljs-ocean";
-
-$accent: rgb({! accent.r !}, {! accent.g !}, {! accent.b !});
-$lightweight-accent: rgb(250, 160, 0);
-$black: #000000;
-$black-down: #3f3f3f;
-
-$lean-width: 700px;
-$lean-width-plus: 740px;
-$stick-header-width: 940px;
-
 body {
   min-height: 100vh;
+
   margin: 0;
   padding: 0;
 
@@ -25,47 +15,24 @@ body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 
+  &.ios {
+    min-height: 86vh;
+    max-height: 86vh;
+    height: 86vh;
+
+    max-width: 100vw;
+  }
+
   @media screen and (max-width: $lean-width) {
     align-items: initial;
   }
 
-  p {
-    line-height: 1.5rem;
-  }
-
-  a {
-    color: $black;
-    text-decoration-color: $accent;
-
-    &:hover, &:hover * {
-      color: $black-down;
-    }
-
-    &:active, &:active * {
-      color: $accent;
-    }
-
-    &.lw {
-      text-decoration-color: $lightweight-accent;
-
-      &:active, &:active * {
-        color: $lightweight-accent;
-      }
-    }
-
-    &.fragment {  // style for href="#<fragment>" links
-      text-decoration-style: dashed;
-      text-decoration-width: 1.5px;
-    }
-  }
-
-  hr {
-    margin: 2em 0;
-    border: 1px solid rgb(234, 234, 234);
-  }
-
   main {
     max-width: 800px;
+
+    &.wide {
+      max-width: 100vw;
+    }
 
     @media screen and (max-width: 840px) {
       padding: 0 1em 0;
@@ -126,29 +93,26 @@ body {
     font-size: 1rem;
   }
 
-  pre {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 315px;
+    grid-gap: 0;
 
-    code {
-      @media screen and (max-width: $lean-width-plus) {
-        max-width: 92vw;
-      }
+    > * {
+      max-width: 33.333vw;
+      max-height: 315px;
 
-      &.bash {
-        .hljs-built_in {
-          color: inherit;
-        }
-
-        &:before {
-          content: '$ ';
-          color: rgba(192, 197, 206, 0.6);
-        }
-      }
+      width: 33.333vw;
+      height: 315px;
     }
 
-    &.multiline-bash {
-      code:not(:last-of-type) {
-        margin-bottom: -1.2em;
-        padding-bottom: 0;
+    @media screen and (max-width: $lean-width-plus) {
+      grid-template-columns: 1fr;
+
+      > * {
+        max-width: 100vw;
+        width: 100vw;
       }
     }
   }
