--- a/lightweight/project-template/run.py.j2
+++ b/lightweight/project-template/run.py.j2
@@ -2,6 +2,10 @@ from lightweight import Site, jinja, sass, directory, template, markdown, paths,
 
 from pathlib import Path
 
+
+module_dir = Path(__file__).parent
+
+
 def {! title_slug !}(url):
     site = Site(
         title='{! site.title !}',
@@ -17,8 +21,6 @@ def {! title_slug !}(url):
         {? endif ?}
     )
 
-    module_dir = Path(__file__).parent
-
     with directory(module_dir):
         # Render an index page from Jinja2 template.
         site.include('index.html', jinja('index.html'))
@@ -26,7 +28,7 @@ def {! title_slug !}(url):
         site.include('labs.html', jinja('labs.html'))
 
         # Render markdown blog posts.
-        [site.include(f'blog/{post.source_path.stem}.html', post) for post in blog_posts('blog/**.md')]
+        [site.include(f'blog/{post.source_path.stem}.html', post) for post in blog_posts('posts/**.md')]
         site.include('blog.html', jinja('blog.html', posts=from_ctx(post_tasks)))
 
         # Syndicate RSS and Atom feeds.
@@ -44,7 +46,7 @@ def {! title_slug !}(url):
 
 
 def blog_posts(source: str):
-    post_template = template('templates/blog/post.html')
+    post_template = template('_templates_/blog/post.html')
     return (markdown(path, post_template) for path in paths(source))
 
 
