Hide Neo under details

--- a/lightweight/project-template/styles/elements.scss
+++ b/lightweight/project-template/styles/elements.scss
@@ -30,3 +30,17 @@ hr {
 img {
   max-width: 100%;
 }
+
+
+details {
+  background-color: $accent-light;
+  padding: 1em;
+
+  summary {
+    cursor: pointer;
+  }
+
+  &[open] summary {
+    margin-bottom: 1em;
+  }
+}
