--- a/lightweight/project-template/styles/attributes.scss
+++ b/lightweight/project-template/styles/attributes.scss
@@ -1,7 +1,8 @@
 /* {// We do not append .j2 to this file’s name for IDE to resolve attributes. */
 // When rendering as Jinja template the $accent is replaced.
 $accent: rgb(250, 160, 0);
-//}💝 */ $accent: {! accent.css() !};
+$accent-light: rgba(250, 160, 0, 0.2); // a light color suitable for backgrounds
+//}💝 */ $accent: {! accent.css() !}; $accent-light: {! accent.css(alpha=0.2) !};
 $black: #000000;
 $black-down: #3f3f3f;
 
