--- a/lightweight/project-template/styles/labs.scss
+++ b/lightweight/project-template/styles/labs.scss
@@ -4,4 +4,25 @@
 #labs {
   width: 100vw;
   margin-top: 1em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 315px;
+  grid-gap: 0;
+
+  > * {
+    max-width: 33.333vw;
+    max-height: 315px;
+
+    width: 33vw;
+    height: 315px;
+  }
+
+  @media screen and (max-width: $lean-width-plus) {
+    grid-template-columns: 1fr;
+
+    > * {
+      max-width: 100vw;
+      width: 100vw;
+    }
+  }
 }
