--- a/lightweight/project-template/run.py.j2
+++ b/lightweight/project-template/run.py.j2
@@ -1,4 +1,4 @@
-from lightweight import Site, jinja, sass, directory, template, markdown, paths, atom, rss, GenContext, from_ctx, Author
+from lightweight import Site, jinja, sass, directory, template, markdown, paths, GenContext, from_ctx
 
 from pathlib import Path
 
@@ -11,14 +11,6 @@ def {! title_slug !}(url):
         title='{! site.title !}',
         description='A site generated with Lightweight',
         url=url,
-        {? if site.authors ?}
-        authors=[
-            {?- for author in site.authors -?}
-            Author(name='{! author.name !}', email='{! author.email !}')
-            {?- if not loop.last ?}, {? endif -?}
-            {? endfor -?}
-        ],
-        {? endif ?}
     )
 
     with directory(module_dir):
@@ -30,10 +22,6 @@ def {! title_slug !}(url):
         # Render markdown blog posts.
         [site.include(f'blog/{post.source_path.stem}.html', post) for post in blog_posts('posts/**.md')]
         site.include('blog.html', jinja('blog.html', posts=from_ctx(post_tasks)))
-
-        # Syndicate RSS and Atom feeds.
-        site.include('blog.atom.xml', atom(site['blog']))
-        site.include('blog.rss.xml', rss(site['blog']))
 
         # Render SASS to CSS.
         site.include('css/global.css', sass('styles/global.scss'))
